# moonshine_behavior

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: bird.rs  player.rs  signal.rs  transitions.rs
src/: events.rs  lib.rs  memory.rs  plugin.rs  sequence.rs  tests.rs  transition.rs
tests/: transition.rs
