[package]
name = "moonshine-behavior"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Minimalistic state machine for Bevy game engine."
homepage = "https://github.com/Zeenobit/moonshine_behavior"
repository = "https://github.com/Zeenobit/moonshine_behavior"

[dependencies]
bevy_app = "0.15.*"
bevy_ecs = "0.15.*"
bevy_reflect = "0.15.*"
bevy_utils = "0.15.*"
bevy_derive = "0.15.*"
moonshine-kind = { version = "0.2.*", path = "../core/crates/kind" }

[dev-dependencies]
bevy = "0.15.*"
