[package]
name = "moonshine-behavior"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Minimalistic state machine for Bevy game engine."
homepage = "https://github.com/Zeenobit/moonshine_behavior"
repository = "https://github.com/Zeenobit/moonshine_behavior"

[dependencies]
bevy_app = "0.16.*"
bevy_ecs = "0.16.*"
bevy_reflect = "0.16.*"
bevy_log = "0.16.*"
bevy_derive = "0.16.*"
moonshine-kind = { version = "0.2.*" }

[dev-dependencies]
bevy = "0.16.*"
