[package]
name = "moonshine-behavior"
version = "0.3.1"
edition = "2021"
license = "MIT"
description = "Minimalistic state machine for Bevy game engine."
homepage = "https://github.com/Zeenobit/moonshine_behavior"
repository = "https://github.com/Zeenobit/moonshine_behavior"

[dependencies]
bevy_app = "0.17"
bevy_ecs = "0.17"
bevy_reflect = "0.17"
bevy_log = "0.17"
bevy_derive = "0.17"
moonshine-kind = { version = "0.4" }
moonshine-util = { version = "0.4" }

[dev-dependencies]
bevy = "0.17"
